# scbbm

./: .gitignore  .gitmodules  do_sim.py  final_score_dataset.py  get_scores.py  gs.py  main.py  pbp_dataset.py  pyproject.toml  score_dataset.py  sim_scores.py
models/: game_sim.py
trainers/: sim_trainer.py
