[tool.poetry]
name = "basketball"
version = "0.1.0"
description = ""
authors = ["none"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.0.5"
pandas = "^2.0.3"
pypika = "^0.48.9"
matplotlib = "^3.7.2"
torch = "^2.0.1"
tqdm = "^4.66.1"
tensorboard = "^2.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
